# datacom-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_logger.py  chat.py  corpus.py  docker-compose.yml  evaluate.py  fetch.py  ingest.py  pyproject.toml  qa.py  report.md  retrieval.py  streamlit_app.py  tools.py  travel_agent.py  travel_agent_tools.py  travel_planner.py
.streamlit/: config.toml
eval/: questions.json
pages/: 1_Chat.py  2_QA.py  3_Trip_Planner.py  4_Code_Assistant.py  5_Metrics.py
pages/metrics/: agent.py  chat.py  retrieval.py
task31/: chat.py
task32/: corpus.py  evaluate.py  fetch.py  ingest.py  qa.py  retrieval.py
task33/: travel_agent.py  travel_agent_logger.py  travel_agent_tools.py  travel_planner.py
task34/: code_assistant.py  code_generator.py  executor.py  models.py
task34/languages/: python_runner.py  rust_runner.py
tests/: test_agent.py  test_evaluate.py  test_fetch.py  test_retrieval.py  test_task31_chat.py  test_task32_evaluate.py  test_task32_fetch.py  test_task32_retrieval.py  test_task33_agent.py  test_task33_logger.py  test_task33_tools.py  test_task34_code_assistant.py  test_task34_code_generator.py  test_task34_executor.py  test_task34_rust_runner.py
