[project]
name = "datacom-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade 
    "B",   # flake8-bugbear (common bug patterns)
]

[tool.ruff.format]
quote-style = "double"
