[tool.setuptools.packages.find]
where = ["."]
include = ["task31*", "task32*", "task33*", "task34*"]

[project]
name = "datacom-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade 
    "B",   # flake8-bugbear (common bug patterns)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [".", "task31", "task32", "task33", "task34", "task34/languages"]
testpaths = ["tests"]
